feat(i18n): 添加多语言支持和登录相关翻译
refactor(ui): 重构左侧菜单栏和顶部应用栏组件
style: 格式化代码并修复缩进问题
chore: 更新依赖项和添加开发文档

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   http: ^1.4.0
   flutter_launcher_icons: ^0.14.4
   font_awesome_flutter: ^10.9.0
+  country_flags: ^3.3.0
 
 dev_dependencies:
   flutter_test:
