--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   font_awesome_flutter: ^10.9.0
   country_flags: ^3.3.0
+  country_codes_info: ^0.0.7
 
 dev_dependencies:
   flutter_test:
