--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   font_awesome_flutter: ^10.9.0
   country_flags: ^3.3.0
   country_codes_info: ^0.0.7
+  appwrite: ^17.1.0
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
