feat(payment): 集成Stripe支付功能
添加flutter_stripe依赖并实现基础支付页面

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   country_codes_info: ^0.0.7
   appwrite: ^17.1.0
   sign_in_with_apple: ^7.0.1
+  flutter_stripe: ^11.5.0
 
 dev_dependencies:
   flutter_test:
