--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   appwrite: ^17.1.0
   sign_in_with_apple: ^7.0.1
   flutter_stripe: ^11.5.0
+  supabase_flutter: ^2.9.1
 
 dev_dependencies:
   flutter_test:
