--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   sign_in_with_apple: ^7.0.1
   flutter_stripe: ^11.5.0
   supabase_flutter: ^2.9.1
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
