--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,5 +56,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>需要相机权限以扫描银行卡</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要相册权限以选择银行卡图片</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要麦克风权限以进行语音识别</string>
+	<key>NSLocationUsageDescription</key>
+	<string>需要定位权限以获取您的位置</string>
 </dict>
 </plist>
