--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   sign_in_with_apple: ^7.0.1
   supabase_flutter: ^2.9.1
   loading_animation_widget: ^1.3.0 
+  in_app_purchase: ^3.2.3
+  web_socket_channel: ^3.0.3
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
